<!--
  ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- Header logo -->

    <LinearLayout
        android:id="@+id/linearLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dip"
            android:layout_height="30dip"
            android:background="@drawable/text_border"
            android:contentDescription="@string/logo_description"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/logo" />

        <!-- My World in Brief -->

        <TextView
            android:id="@+id/myworld_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2da9e1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/parterid_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="5dp"
        android:text="@string/saved_votes_partner_id_label"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/partercountry_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="5dp"
        android:text="@string/saved_votes_partner_country_label"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/section_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/text_border"
        android:padding="5dp"
        android:text="@string/saved_votes_section_description_label"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/section_votes_not_sent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="#ffffff"
        android:padding="10dp"
        android:text="@string/saved_votes_not_sent_count_label"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/section_votes_upload_process"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="#ffffff"
        android:padding="10dp"
        android:text="@string/saved_votes_upload_process_label"
        android:textColor="#ff0000"
        android:textSize="16sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressIcon"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_marginLeft="100dip"
        android:layout_marginRight="100dip"
        android:indeterminateDrawable="@drawable/loader"
        android:visibility="gone" />
    <!-- Bottom Button -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="vertical"
        android:layout_gravity="bottom|center_horizontal" >

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/back_to_main"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_blue"
                android:drawableLeft="@drawable/back"
                android:onClick="btnBack_Click"
                android:text="@string/pref_back_button" />

            <Button
                android:id="@+id/save_votes"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_blue"
                android:drawableLeft="@drawable/upload"
                android:onClick="btnSyncVotes_Click"
                android:text="@string/text_upload_votes" />
        </LinearLayout>
    </LinearLayout>

    <!-- Footer goes here -->

</LinearLayout><!-- /ScrollView -->
