<!--  ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" -->

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- Header logo -->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:contentDescription="@string/logo_description"
            android:paddingBottom="20sp"
            android:src="@drawable/logo" />

        <!-- My World in Brief -->

        <TextView
            android:id="@+id/myworld_msg"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2da9e1"
            android:padding="3dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/myworld_brief"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:background="#ffffff"
            android:paddingBottom="20sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20sp"
            android:text="@string/myworld_brief"
            android:textColor="#000000"
            android:textSize="16sp" />

        <!-- Bottom Button -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
           >

            <LinearLayout
                android:id="@+id/linearLayoutButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp" >

                <Button
                   android:id="@+id/settings"
                   android:background="@drawable/btn_blue"
                   style="@style/ButtonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_settings_button_text"
                     android:onClick="btnSettings_Click" >
                </Button>

                <Button
                    android:id="@+id/saved_votes"
                    android:background="@drawable/btn_blue"
                    style="@style/ButtonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    
                    android:text="@string/title_saved_votes_button_text"
                     android:onClick="btnSavedVotes_Click" >
                </Button>

                <Button
                   android:id="@+id/startVote"
                   android:background="@drawable/btn_blue" 
                   style="@style/ButtonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                   android:text="@string/title_vote_button_text"
                   android:onClick="btnBeginVote_Click" >
                </Button>
            </LinearLayout>
            
             <LinearLayout
                android:id="@+id/linearLayoutCloseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >


                <Button
                    android:id="@+id/exit_app"
                    android:background="@drawable/btn_blue"
                    style="@style/ButtonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_exit_app_button_text"
                     android:onClick="btnExitApp_Click" >
                </Button>

                
            </LinearLayout>
        </LinearLayout>
        <!-- Footer goes here -->

    </LinearLayout>

<!--  /ScrollView-->