 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- Header logo -->

   <LinearLayout
                android:id="@+id/linearLayoutButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dip"
            android:layout_height="30dip"
            android:contentDescription="@string/logo_description"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/logo"
            android:background="@drawable/text_border" />

        <!-- My World in Brief -->

        <TextView
            android:id="@+id/canvasser_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2da9e1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp" />
</LinearLayout>

    <TextView
        android:id="@+id/canvasser_thank_you_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2da9e1"
        android:layout_marginTop="20dp"
        android:paddingLeft="20sp"
        android:text="@string/myworld_thank_you"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/votes_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:background="@drawable/text_border"
        android:paddingLeft="0sp"
        android:text="@string/text_votes_count_label"
        android:textAlignment="center"
        android:textColor="#ca3a28"
        android:textSize="14sp" />
    
     <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                 >
                 
          <LinearLayout
                android:id="@+id/linearLayoutButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp" >
            
            <Button
                android:id="@+id/unsynchronized_votes"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_blue"
                android:drawableLeft="@drawable/back"
                android:onClick="btnHome_clicked"
                android:text="@string/pref_back_button"
                android:textColor="#ffffff"
                android:textSize="13sp" />

            <Button
                android:id="@+id/more_votes"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_blue"
                android:drawableLeft="@drawable/add"
                android:onClick="btnAdd_clicked"
                android:text="@string/text_more_votes"
                android:textColor="#ffffff"
                android:textSize="13sp" />
      
  </LinearLayout>
  </LinearLayout>

</LinearLayout>